--- a/pay.html
+++ b/pay.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>哒哒哒哒哒哒</h1>
+    <h1>哒哒哒哒哒哒</h1>
+    <h1>哒哒哒哒哒哒</h1>
+    <h1>哒哒哒哒哒哒</h1>
     <h1>支付</h1>
 </body>
 </html>
